force-app/main/default/objects/Group__c/fields/Group_Address_Details__c.field-meta.xml
<CustomField>
    <fullName>Group_Address_Details__c</fullName>
    <label>Group Address Details</label>
    <type>TextArea</type>
</CustomField>