force-app/main/default/objects/Group__c/fields/Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Group_Size__c</fullName>
    <label>Group Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>