force-app/main/default/objects/Group__c/fields/Is_Privilaged__c.field-meta.xml
<CustomField>
    <fullName>Is_Privilaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Privilaged</label>
    <type>Checkbox</type>
</CustomField>