force-app/main/default/objects/Group__c/fields/Parent_Group__c.field-meta.xml
<CustomField>
    <fullName>Parent_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Group</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>Groups</relationshipLabel>
    <relationshipName>Groups</relationshipName>
    <type>Lookup</type>
</CustomField>