force-app/main/default/objects/Group__c/fields/Support_Website_Address__c.field-meta.xml
<CustomField>
    <fullName>Support_Website_Address__c</fullName>
    <label>Support Website Address</label>
    <type>Url</type>
</CustomField>